Fix spacing of new post button

--- a/com/header.less
+++ b/com/header.less
@@ -53,6 +53,7 @@ header {
     &.new-post {
       border-bottom: 0;
       padding-right: 0;
+      padding-left: 7px;
     }
 
     &.profile {
